fix hide add-card modal in deck on mobile, fix floating add-card icons

--- a/react-frontend/assets/css/style.styl
+++ b/react-frontend/assets/css/style.styl
@@ -352,8 +352,11 @@ div.popover-rulings
 div.font-large
   font-size: large
 
-div.add-deck-card
-  font-size: 1.6em
+font-1.7
+  font-size: 1.7em
+
+font-1.85
+  font-size: 1.85em
 
 div.forgot-password
   font-size: small
